force-app/main/default/objects/Report_Section_List__c/Report_Section_List__c.object-meta.xml
<CustomObject>
    <label>Report Section List</label>
    <nameField>
        <label>Report Section List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Section Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>