force-app/main/default/objects/Report_Section_List__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>ddm__dmsfc_Form__c</referenceTo>
    <relationshipLabel>Report Section Lists</relationshipLabel>
    <relationshipName>Report_Section_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>