force-app/main/default/objects/Report_Section_List__c/fields/Report_Section__c.field-meta.xml
<CustomField>
    <fullName>Report_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Section</label>
    <referenceTo>Report_Section__c</referenceTo>
    <relationshipLabel>Report Section Lists</relationshipLabel>
    <relationshipName>Report_Section_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>