force-app/main/default/objects/Report_Section_List__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Report Section Lists</relationshipLabel>
    <relationshipName>Report_Section_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>